force-app/main/default/objects/Form_Builder__Document_Tracking__c/fields/Form_Builder__Content__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Content__c</fullName>
    <label>Content</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>