force-app/main/default/objects/Form_Builder__Document_Tracking__c/fields/Form_Builder__Document_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Document_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Tracking</label>
    <referenceTo>Form_Builder__Document_Tracking__c</referenceTo>
    <relationshipLabel>Document Trackings</relationshipLabel>
    <relationshipName>Document_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>