force-app/main/default/objects/Form_Builder__Document_Tracking__c/fields/Form_Builder__RevisionID__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__RevisionID__c</fullName>
    <label>RevisionID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>