force-app/main/default/objects/Form_Builder__Document_Tracking__c/fields/Form_Builder__Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insertion</fullName>
            </value>
            <value>
                <fullName>Deletion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>